@@ -1,3 +1,5 @@
+[B]1.4:[/B]
+Convert to module for archivCZSK >=1.7.0
 [B]1.3:[/B]
 Fixed crash when video is not available
 [B]1.2:[/B]
